tests/syntax/bad/testfile-parameters2-1.scala
class A { def m(x: Int,) {} }
object Main { def main(args: Array[String]) { } }
